tests/fixtures/invalid/bool_notin_none.py
# Cannot use 'not in' with Bool and None
x: bool = True not in None
